--- a/design.css
+++ b/design.css
@@ -515,17 +515,29 @@ footer {
   {
     .site-footer [class^=col-]
     {
-      margin-bottom:30px
+      margin-bottom:10px
     }
     .site-footer
     {
-       font-size: 15px;
+       font-size: 14px;
+       line-height: 18px;
     }
     .site-footer h6
     {
-       font-size: 19px;
+       font-size: 18px;
     }
-   
+    .site-footer hr.small
+    {
+        margin: 10px 0;
+    }
+    .site-footer hr
+    {
+        margin: 5px 0;
+    }
+    #navedit
+    {
+        min-height: 60px !important;
+    }
   
   }
   @media (max-width:767px)
